# benchmarks

./: make-benchmarks.mk
activity_rec/: CMakeLists.txt
activity_rec/src/: CMakeLists.txt
activity_rec/src/activity_rec/: main.c
adpcm_encode/: CMakeLists.txt
adpcm_encode/src/: CMakeLists.txt
adpcm_encode/src/adpcm_encode/: adpcm_encode_test.c
aes/: CMakeLists.txt
aes/src/: CMakeLists.txt
aes/src/aes/: main.c
anomaly/: CMakeLists.txt
anomaly/src/: CMakeLists.txt
anomaly/src/anomaly/: main.c
basicmath/: CMakeLists.txt
basicmath/src/: CMakeLists.txt
basicmath/src/basicmath/: cubic.c  main.c
bitcount/: CMakeLists.txt
bitcount/src/: CMakeLists.txt
bitcount/src/bitcount/: bitops.h  bitstrng.c  extkword.h  main.c
chacha20/: CMakeLists.txt
chacha20/src/: CMakeLists.txt
chacha20/src/chacha20/: main.c
crc/src/: CMakeLists.txt
crc/src/crc/: main.c
crc/src/portme/: common.c  printf.c
crc/src/portme (another copy)/: common.h  supportFuncs.c
dijkstra/src/dijkstra/: dijkstra.c
dijkstra/src/portme/: printf.h
fft/: CMakeLists.txt
fft/src/: CMakeLists.txt
fft/src/fft/: main.c
image_class/: CMakeLists.txt
image_class/src/: CMakeLists.txt
image_class/src/image_class/: main.c  tm_layers.c  tm_port.h  tm_stat.c
image_class/src/portme/: printfmap.c
jpeg_encode/: CMakeLists.txt
jpeg_encode/src/: CMakeLists.txt
jpeg_encode/src/jpeg_encode/: conf.h  huff.c  jpeg_encode_test.c
lorawan_down/: CMakeLists.txt
lorawan_down/src/: CMakeLists.txt
lorawan_down/src/lorawan_down/: lorawan_down_test.c
lorawan_up/: CMakeLists.txt
lorawan_up/src/: CMakeLists.txt
lorawan_up/src/lorawan_up/: lorawan_up_test.c
lzfx_comp/: CMakeLists.txt
lzfx_comp/src/: CMakeLists.txt
lzfx_comp/src/lzfx_comp/: lzfx.c  lzfx_compress_test.c
lzfx_decomp/: CMakeLists.txt
lzfx_decomp/src/: CMakeLists.txt
lzfx_decomp/src/lzfx_decomp/: lzfx_decomp_test.c
mp3_encode/: CMakeLists.txt
mp3_encode/src/: CMakeLists.txt
mp3_encode/src/mp3_encode/: mp3_encode_test.c  shine_mp3.c
patricia/: CMakeLists.txt
patricia/src/: CMakeLists.txt
patricia/src/patricia/: patricia_test.c
poly1305/: CMakeLists.txt
poly1305/src/: CMakeLists.txt
poly1305/src/poly1305/: main.c
qsort/: CMakeLists.txt
qsort/src/: CMakeLists.txt
qsort/src/portme/: printfmap.c
qsort/src/qsort/: qsort.c
rsa/: CMakeLists.txt
rsa/src/: CMakeLists.txt
rsa/src/rsa/: bn.c  main.c  rsa_test.c
sensor_fusion/: CMakeLists.txt
sensor_fusion/src/: CMakeLists.txt
sensor_fusion/src/sensor_fusion/: main.c
sha256/: CMakeLists.txt
sha256/src/: CMakeLists.txt
sha256/src/sha256/: main.c
stringsearch/: CMakeLists.txt
stringsearch/src/: CMakeLists.txt
stringsearch/src/stringsearch/: main.c
susan_corners/: CMakeLists.txt
susan_corners/src/: CMakeLists.txt
susan_corners/src/susan_corners/: susan.c
susan_edges/: CMakeLists.txt
susan_edges/src/: CMakeLists.txt
susan_edges/src/portme/: printfmap.c
susan_edges/src/susan_edges/: susan.c
susan_smooth/: CMakeLists.txt
susan_smooth/src/: CMakeLists.txt
susan_smooth/src/susan_smooth/: susan.c
